--- a/src/KeePassWin/Views/SettingsPage.xaml
+++ b/src/KeePassWin/Views/SettingsPage.xaml
@@ -33,13 +33,45 @@
                             <DataTemplate x:DataType="vm:Library">
                                 <HyperlinkButton Content="{x:Bind Name}" NavigateUri="{x:Bind Url}" />
                             </DataTemplate>
-                        </ItemsControl.ItemTemplate> 
+                        </ItemsControl.ItemTemplate>
                     </ItemsControl>
                 </StackPanel>
             </PivotItem>
 
             <PivotItem Header="Privacy">
                 <TextBlock Text="{x:Bind Path=Model.PrivacyStatement}" TextWrapping="Wrap"  />
+            </PivotItem>
+
+            <PivotItem Header="Log">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="10" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid Grid.Row="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+
+                        <CheckBox Grid.Column="0" Margin="0,0,10,0" IsChecked="{Binding Path=Logging.LogView.ShouldLogEvents, Mode=TwoWay}" Content="Enable logging" />
+                        <Button Grid.Column="1" Margin="10,0,10,0" Command="{x:Bind Path=Model.Logging.SendCommand}"  Content="Send Log" />
+                        <Button Grid.Column="2" Margin="10,0,10,0" Command="{x:Bind Path=Model.Logging.CopyCommand}" Content="Copy Log" />
+                    </Grid>
+
+                    <TextBlock Grid.Row="2"  Text="{x:Bind Path=Model.Logging.Statement}" TextWrapping="Wrap"  />
+
+                    <ScrollViewer Grid.Row="4" x:Name="LogScroll">
+                        <TextBlock x:Name="LogText"
+                            ScrollViewer.VerticalScrollMode="Auto"
+                            Text="{Binding Path=Logging.LogView.Log, Mode=OneWay}" TextWrapping="Wrap" />
+                    </ScrollViewer>
+                </Grid>
             </PivotItem>
         </Pivot>
     </Grid>
