--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -131,7 +131,7 @@
                                     </DataTemplate>
                                 </controls:BreadCrumbView.ItemTemplate>
                             </controls:BreadCrumbView>
-                            <AutoSuggestBox QueryIcon="Find" TextChanged="SearchTextChanged" />
+                            <AutoSuggestBox mvvm:Keyboard.Focus="Search" QueryIcon="Find" TextChanged="SearchTextChanged" />
                         </StackPanel>
                     </DataTemplate>
                 </controls:MasterDetailsView.MasterHeaderTemplate>
