--- a/src/KeePassWin/Controls/EntryViewControl.xaml
+++ b/src/KeePassWin/Controls/EntryViewControl.xaml
@@ -6,55 +6,41 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid>
-        <Grid.Resources>
-            <x:Double x:Key="TextBoxWidth">280</x:Double>
-        </Grid.Resources>
+    <ScrollViewer HorizontalScrollMode="Disabled" VerticalScrollBarVisibility="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MaxWidth="400">
+        <StackPanel Margin="20,0,20,0" VerticalAlignment="Stretch">
+            <StackPanel.Resources>
+                <Style x:Name="EntryForm" TargetType="Control">
+                    <Setter Property="Margin" Value="0,10,5,10" />
+                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                </Style>
 
-        <StackPanel>
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <TextBox Header="Title" TabIndex="1" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Title, Mode=TwoWay}" />
-                <Button Background="Transparent" IsTabStop="False" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=CopyCommand}" CommandParameter="{x:Bind Path=Entry.Title, Mode=OneWay}">
-                    <Button.Content>
-                        <SymbolIcon Symbol="Copy" />
-                    </Button.Content>
-                </Button>
-            </StackPanel>
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <TextBox Header="Username" TabIndex="2" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.UserName, Mode=TwoWay}" />
-                <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=CopyCommand}" CommandParameter="{x:Bind Path=Entry.UserName, Mode=OneWay}">
-                    <Button.Content>
-                        <SymbolIcon Symbol="Copy" />
-                    </Button.Content>
-                </Button>
-            </StackPanel>
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <StackPanel>
-                    <PasswordBox x:Name="passwordBox" TabIndex="3" Header="Password" Width="{StaticResource TextBoxWidth}" Password="{x:Bind Path=Entry.Password, Mode=TwoWay}" PasswordRevealMode="Hidden" />
-                    <CheckBox Content="Show password" IsChecked="False" Checked="PasswordChecked" Unchecked="PasswordChecked" />
-                </StackPanel>
-                <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=CopyCommand}" CommandParameter="{x:Bind Path=Entry.Password, Mode=OneWay}">
-                    <Button.Content>
-                        <SymbolIcon Symbol="Copy" />
-                    </Button.Content>
-                </Button>
-            </StackPanel>
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <TextBox Header="Website" TabIndex="4" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Url, Mode=TwoWay}" />
-                <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=CopyCommand}" CommandParameter="{x:Bind Path=Entry.Url, Mode=OneWay}">
-                    <Button.Content>
-                        <SymbolIcon Symbol="Copy" />
-                    </Button.Content>
-                </Button>
-            </StackPanel>
-            <StackPanel Margin="0,10,0,10" Orientation="Horizontal">
-                <TextBox Header="Notes" TabIndex="5" Width="{StaticResource TextBoxWidth}" Text="{x:Bind Path=Entry.Notes, Mode=TwoWay}" AcceptsReturn="True" TextWrapping="Wrap" Height="172" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-                <Button Background="Transparent" Margin="5,0,0,0" VerticalAlignment="Top" Command="{x:Bind Path=CopyCommand}" CommandParameter="{x:Bind Path=Entry.Notes, Mode=OneWay}">
-                    <Button.Content>
-                        <SymbolIcon Symbol="Copy" />
-                    </Button.Content>
-                </Button>
-            </StackPanel>
+                <Style TargetType="TextBox" BasedOn="{StaticResource EntryForm}" />
+                <Style TargetType="PasswordBox" BasedOn="{StaticResource EntryForm}" />
+            </StackPanel.Resources>
+
+            <TextBox
+                Header="Title" Text="{x:Bind Path=Entry.Title, Mode=TwoWay}" />
+
+            <TextBox
+                Header="Username" Text="{x:Bind Path=Entry.UserName, Mode=TwoWay}" />
+
+            <PasswordBox
+                x:Name="passwordBox"
+                PasswordRevealMode="Hidden" 
+                Header="Password" Password="{x:Bind Path=Entry.Password, Mode=TwoWay}" />
+
+            <CheckBox
+                Content="Show password" IsChecked="False" Checked="PasswordChecked" Unchecked="PasswordChecked" />
+
+            <TextBox
+                Header="Website" Text="{x:Bind Path=Entry.Url, Mode=TwoWay}" />
+
+            <TextBox
+                Header="Notes" Text="{x:Bind Path=Entry.Notes, Mode=TwoWay}" 
+                AcceptsReturn="True" TextWrapping="Wrap"
+                VerticalContentAlignment="Stretch" 
+                ScrollViewer.VerticalScrollBarVisibility="Auto" 
+                MinHeight="300" />
         </StackPanel>
-    </Grid>
+    </ScrollViewer>
 </UserControl>
