--- a/src/KeePassWin/Views/PasswordDialog.xaml
+++ b/src/KeePassWin/Views/PasswordDialog.xaml
@@ -4,7 +4,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mvvm="using:KeePass.Win.Mvvm"
     mc:Ignorable="d"
+    mvvm:Keyboard.Dialog="True"
     Title="{x:Bind Path=Model.Name}"
     PrimaryButtonText="Unlock"  
     PrimaryButtonClick="UnlockDatabaseClick"
