Add context menu to rename group

--- a/src/KeePassWin/Controls/NameBoxDialog.xaml
+++ b/src/KeePassWin/Controls/NameBoxDialog.xaml
@@ -16,6 +16,7 @@
 
     <Grid>
         <TextBox x:Name="TextInputBox"
+            Text="{x:Bind Path=Text, Mode=OneWay}"
             HorizontalAlignment="Stretch" VerticalAlignment="Center" />
     </Grid>
 </ContentDialog>
