--- a/src/KeePassWin/Controls/MasterDetailsView.xaml
+++ b/src/KeePassWin/Controls/MasterDetailsView.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:mvvm="using:KeePass.Win.Mvvm"
                     xmlns:controls="using:KeePass.Win.Controls">
 
     <Style TargetType="controls:MasterDetailsView">
@@ -36,6 +37,7 @@
                                                   ContentTemplate="{TemplateBinding MasterHeaderTemplate}"
                                                   Visibility="Collapsed" />
                                 <ListView x:Name="MasterList"
+                                          mvvm:Keyboard.AutoWire="True"
                                           Grid.Row="1" TabIndex="-1000"
                                           ItemContainerStyle="{TemplateBinding ItemContainerStyle}"
                                           ItemTemplateSelector="{TemplateBinding ItemTemplateSelector}"
