Fix tab movement through application

--- a/src/KeePassWin/AppShell.xaml
+++ b/src/KeePassWin/AppShell.xaml
@@ -3,7 +3,6 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="using:KeePass.Win"
-      xmlns:views="using:KeePass.Win.Views"
       xmlns:viewModels="using:KeePass.Win.ViewModels"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -37,6 +36,7 @@
         <controls:HamburgerMenu x:Name="Menu"
             PaneBackground="{ThemeResource ApplicationMenuBackgroundThemeBrush}"
             DisplayMode="CompactOverlay"
+            IsTabStop="False"
             ItemsSource="{x:Bind Path=Model.Databases}"
             ItemTemplate="{StaticResource MenuItemTemplate}"
             OptionsItemClick="HamburgerMenuOptionsItemClick"
