Add remove command for groups

--- a/src/KeePassWin/Views/DatabasePage.xaml
+++ b/src/KeePassWin/Views/DatabasePage.xaml
@@ -39,6 +39,13 @@
                             CommandParameter="{x:Bind}"
                             Command="{Binding Path=DataContext.RenameGroupCommand, ElementName=Root, Mode=OneTime}"
                             mvvm:Keyboard.Shortcut="Rename" />
+                        <MenuFlyoutItem
+                            AllowFocusOnInteraction="True"
+                            AllowFocusWhenDisabled="True"
+                            Text="Remove"
+                            CommandParameter="{x:Bind}"
+                            Command="{Binding Path=DataContext.RemoveGroupCommand, ElementName=Root, Mode=OneTime}"
+                            mvvm:Keyboard.Shortcut="DeleteItem" />
                     </MenuFlyout>
                 </Grid.ContextFlyout>
 
