--- a/src/KeePassWin/Views/MainPage.xaml
+++ b/src/KeePassWin/Views/MainPage.xaml
@@ -1,17 +1,16 @@
 ﻿<prismMvvm:SessionStateAwarePage x:Class="KeePass.Win.Views.MainPage"
                                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                                 xmlns:local="using:KeePass.Win.Views"
+                                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                                  xmlns:prismMvvm="using:Prism.Windows.Mvvm"
                                  prismMvvm:ViewModelLocator.AutoWireViewModel="True"
                                  mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock HorizontalAlignment="Center"
+        <TextBlock x:Uid="MainPageWelcome"
+                   HorizontalAlignment="Center"
                    VerticalAlignment="Center"
-                   Style="{ThemeResource HeaderTextBlockStyle}"
-                   Text="{x:Bind Path=ViewDataContext.DisplayText, FallbackValue=Title}" />
+                   Style="{ThemeResource HeaderTextBlockStyle}" />
     </Grid>
 </prismMvvm:SessionStateAwarePage>
